# rtiow_cuda

./: .gitignore  CMakeLists.txt  README.md
data/: texture_shader.frag  texture_shader.vert
include/base/: camera.h  hittable.h  ray.h  scene.h  sphere.h  vector.h
include/base/bsdf/: bsdf.h  dielectric.h  diffuse.h
include/common/: allocation.h  macros.h  variant.h
include/opengl/: compiler.h  gl_display.h  programmanager.h  shadermanager.h  texturemanager.h
src/: allocator.h  camera.h  hittable.h  main.cu  opengl_display.cpp  opengl_display.h  ray.h  scene.h  sphere.cu  sphere.h  vector.h
src/base/: scene.cu  sphere.cu
src/base/bsdf/: dielectric.cpp  diffuse.cpp
src/opengl/: buffermanager.h  compiler.cpp  compiler.h  ebomanager.h  framebuffermanager.h  gl_display.cpp  gl_display.h  programmanager.h  shadermanager.h  texturemanager.h  vaomanager.h
src/opengl/shaders/: texture_shader.frag  texture_shader.vert
